--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 </head>
 <body>
     
+    <!----- Top-bar section ----->
+    <section class="top-bar">
+        <div>About</div>
+        <div>Work</div>
+        <div>Portfolio</div>
+        <div>Contact</div>
+    </section>
+
     <!----- Header section ----->
     <section class="header"> 
 
@@ -38,8 +46,9 @@
             <button>Download CV</button>
         </div>
 
-   </section>
+    </section>
 
+    <!----- Latest work section ----->
     <section class="latest-work">
         <div>
             <h3>My <span id="latest-span">latest</span> work</h3>
@@ -49,6 +58,7 @@
         </div>
     </section>
     
+    <!----- Footer section ----->
     <section class="footer">
 
         <div id="work-inquiry">
